# home-llm-bot

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/superpowers/plans/: 2026-03-16-deployment-scripts.md
docs/superpowers/specs/: 2026-03-16-deployment-design.md
migrations/: 001_init.sql
scripts/: common.sh  create-bot-lxc.sh  create-whisper-lxc.sh
src/: config.rs  error.rs  lib.rs  main.rs  orchestrator.rs  state.rs  telegram.rs
src/plugins/: home_assistant.rs  lm_studio.rs  mcp.rs  mod.rs  whisper.rs
