[package]
name = "home-llm-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "home_llm_bot"
path = "src/lib.rs"

[[bin]]
name = "home-llm-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
